apps/formclient/base/formclient-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: formclient
spec:
  selector:
    matchLabels:
      app: formclient
      tier: app
  template:
    metadata:
      labels:
        app: formclient
        tier: app
    spec:
      containers:
        - name: node
          image: quicklookup/formclient:77a087f
          resources:
            requests:
              cpu: 200m
              memory: 200Mi
          volumeMounts:
            - mountPath: /cdn
              name: cdn
          ports:
            - containerPort: 3000
          livenessProbe:
            httpGet:
              port: 3000
              path: /api/status/alive
            initialDelaySeconds: 5
            periodSeconds: 5
          readinessProbe:
            httpGet:
              port: 3000
              path: /api/status/ready
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 2
      imagePullSecrets:
        - name: dockerlock
      volumes:
        - name: cdn
          hostPath:
            path: /data/cdn
