apps/formclient/base/formclient-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: formclient
  labels:
    app: formclient
    tier: app
spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: formclient
    tier: app
